--- a/package.json
+++ b/package.json
@@ -4,62 +4,7 @@
   "description": "[Live Preview](https://basic-node-site.luhook04.repl.co)",
   "main": "app.js",
   "dependencies": {
-    "array-flatten": "^1.1.1",
-    "bytes": "^3.1.2",
-    "body-parser": "^1.20.0",
-    "accepts": "^1.3.8",
-    "call-bind": "^1.0.2",
-    "content-disposition": "^0.5.4",
-    "cookie-signature": "^1.0.6",
-    "content-type": "^1.0.4",
-    "cookie": "^0.5.0",
-    "depd": "^2.0.0",
-    "encodeurl": "^1.0.2",
-    "etag": "^1.8.1",
-    "escape-html": "^1.0.3",
-    "ee-first": "^1.1.1",
-    "fresh": "^0.5.2",
-    "express": "^4.18.1",
-    "destroy": "^1.2.0",
-    "get-intrinsic": "^1.1.2",
-    "has-symbols": "^1.0.3",
-    "has": "^1.0.3",
-    "function-bind": "^1.1.1",
-    "http-errors": "^2.0.0",
-    "iconv-lite": "^0.4.24",
-    "inherits": "^2.0.4",
-    "merge-descriptors": "^1.0.1",
-    "methods": "^1.1.2",
-    "mime": "^1.6.0",
-    "mime-types": "^2.1.35",
-    "ms": "^2.0.0",
-    "mime-db": "^1.52.0",
-    "ipaddr.js": "^1.9.1",
-    "media-typer": "^0.3.0",
-    "parseurl": "^1.3.3",
-    "on-finished": "^2.4.1",
-    "path-to-regexp": "^0.1.7",
-    "object-inspect": "^1.12.2",
-    "negotiator": "^0.6.3",
-    "range-parser": "^1.2.1",
-    "proxy-addr": "^2.0.7",
-    "raw-body": "^2.5.1",
-    "qs": "^6.10.3",
-    "safe-buffer": "^5.2.1",
-    "setprototypeof": "^1.2.0",
-    "safer-buffer": "^2.1.2",
-    "serve-static": "^1.15.0",
-    "side-channel": "^1.0.4",
-    "toidentifier": "^1.0.1",
-    "unpipe": "^1.0.0",
-    "statuses": "^2.0.1",
-    "debug": "^2.6.9",
-    "type-is": "^1.6.18",
-    "forwarded": "^0.2.0",
-    "finalhandler": "^1.2.0",
-    "vary": "^1.1.2",
-    "utils-merge": "^1.0.1",
-    "send": "^0.18.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {},
   "scripts": {
